examples/test/testpolicy13256.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13256
  namespace: namespace26
spec:
  podSelector:
    matchLabels:
      key9: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value21
          key26: value6
      podSelector:
        matchLabels:
          key34: value44
          key40: value19
